# apex-sigma-core

./: .codacy.yml  .codeclimate.yml  .dockerignore  .drone.yml  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  Dockerfile.alpine  README.md  Vagrantfile  docker-compose.yml  dockertool.rb  flake.nix  mkdocs.yml  pylintrc  pyproject.toml  requirements-linux.txt  requirements-test.txt  requirements.txt  run.py  run.sh  test.sh  version.yml
.circleci/: appveyor.yml  config.yml
.forgejo/workflows/: full.yml
.github/: PULL_REQUEST_TEMPLATE.md
.gitlab/ci/: .gitlab-ci.yml
.gitlab/issue_templates/: Suggestion.md
docs/: commands.md  conf.py  downloading.md  faq.md  index.md  index.rst  mechanics.rst  requirements.md  sigma.rst
docs/config/: core.md  index.md  modules.md
docs/configuration/: core.md  plugins.md
docs/contributing/: adding_features.md  pull_requests.md  setup.md
docs/development/: commands.md  core.md  events.md  index.md  modules.md
docs/development/core/: sigma.md
docs/future/: sigma_user_story.md
docs/information/: commands.md  faq.md  questions.md
docs/setup/: discord.md  index.md  ubuntu.md  vagrant.md
docs/setup/linux/: index.md  mongo.md  package.md
docs/setup/windows/: ffmpeg.md  git.md  index.md  msvc.md  python.md
docs/static/: custom.css
docs_beta/: conf.py  index.rst  mechanics.rst  sigma.rst
doki/: blade_flicker.lc  blade_flicker.luci  family_values.lc  family_values.luci  happy_thoughts.lc  happy_thoughts.luci  just_monika.lc  just_monika.luci
info/: .codeclimate.yml  authors.yml  donors.yml  version.json  version.yml
res/vndb/: quotes.tsv
sigma/core/: config_loader.py  sigma.py
sigma/core/mechanics/: anticheat.py  caching.py  command.py  command_requirements.py  config.py  cooldown.py  database.py  details.py  error.py  errors.py  event.py  exceptions.py  executor.py  fetch.py  incident.py  information.py  logger.py  modman.py  module.py  module_component.py  music.py  paginator.py  payload.py  permissions.py  plugman.py  requirements.py  resources.py  statistics.py  threader.py  threading.py
sigma/core/utilities/: data_processing.py  database_key_migrator.py  dialogue_controls.py  event_logging.py  generic_responses.py  keys.json  paginate.py  permission_processing.py  role_processing.py  server_bound_logging.py  stats_processing.py  url_processing.py
tests/core/: example_test.py  paginate_test.py  paginate_test.py.example
(+1392 files in other folders)
