[project]
name = "apex-sigma"
version = "4.109.2199"
requires-python = ">=3.10"
dependencies = [
    "aiohttp",
    "arrow >= 1.3.0",
    "cachetools >= 5.3.3",
    "cryptography >= 42.0.5",
    "cssselect >= 1.2.0",
    "discord.py[voice]",
    "ftfy >= 6.2.0",
    "geopy >= 2.4.1",
    "humanfriendly >= 10.0",
    "lxml",
    "markovify >= 0.9.4",
    "motor >= 3.3.2",
    "pillow >= 11.2.0",
    "psutil >= 5.9.8",
    "pymongo >= 4.6.2",
    "python-aiml >= 0.9.3",
    "pyyaml >= 6.0.1",
    "redis >= 5.0.3",
    "translate >= 3.6.1",
    "twitchio >= 2.9.0",
    "yt_dlp >= 2024.8.1",
    # "systemd == 0.16.1; sys_platform == 'linux'",
]

[project.optional-dependencies]
dev = [
    "pytest == 7.4.3",
    "flake8 == 6.1.0",
]

[project.urls]
Repository = "https://git.luciascipher.com/lucia/apex-sigma"

[tool.setuptools.packages.find]
where = ["sigma/"]
