[project]
name = "apex-sigma"
version = "4.109.2199"
requires-python = ">=3.10"
dependencies = [
    "aiohttp",
    "arrow",
    "cachetools",
    "cryptography",
    "cssselect",
    "discord.py[voice]",
    "ftfy",
    "geopy",
    "humanfriendly",
    "lxml",
    "markovify",
    "motor",
    "pillow",
    "psutil",
    "pymongo",
    "python-aiml",
    "pyyaml",
    "redis",
    "translate",
    "twitchio",
    "yt_dlp",
    # "systemd == 0.16.1; sys_platform == 'linux'",
]

[project.optional-dependencies]
dev = [
    "pytest == 7.4.3",
    "flake8 == 6.1.0",
]

[project.urls]
Repository = "https://git.luciascipher.com/lucia/apex-sigma"

[tool.setuptools.packages.find]
where = ["sigma/"]
